# ROS_AGV

leg_tracker/launch/: joint_leg_tracker.launch  leg_tracker.rviz
my_odom_publisher/: package.xml
my_odom_publisher/launch/: start_odom.launch
my_odom_publisher/src/: odom.py
navigation/robot_pose_ekf/: robot_pose_ekf.launch
obj_detect/: CMakeLists.txt  package.xml
obj_detect/src/: detect_and_go.py  detect_go2.py  go_to_goal.py  image_recognition.py  mapping_setgoal.py  position_cluster.py  result2goal.py  (+2 more)
odometry/: CMakeLists.txt  package.xml
rostensorflow/: GUI_detectobj.py  follow_the_route.py  go_to_goal.py  image_recognition.py  mapping_setgoal.py  position_cluster.py  result2goal.py  step1_mapping.launch  test_key.py  view_frame.launch
serial_example/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  catkin_make.cache  cmake_install.cmake
serial_example/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
serial_example/catkin_generated/installspace/: .rosinstall  serial_example.pc  serial_exampleConfig.cmake  setup.sh
serial_example/catkin_generated/stamps/Project/: _setup_util.py.stamp
serial_example/launch/: control_robot.launch  imu_display.launch
serial_example/src/: catkin_make.cache  odometry.cpp  serial_imu_node.cpp  serial_rx_motor_node.cpp  twist_to_motor.cpp
turtlebot_example/: coffee_bot.py  go_to_specific_point_on_map.py
urdf_tutorial/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+82 files in other folders)
